--- a/src/page/AddContext/addContect.css
+++ b/src/page/AddContext/addContect.css
@@ -1,5 +1,5 @@
 
-section{
+.AddContact{
     padding: 1rem 1rem;
     color: #444;
     font-size: 1.4rem;
@@ -36,4 +36,15 @@ button{
     font-weight: bold;
     margin-bottom: 1rem;
     cursor: pointer;
+}
+@media screen and (max-Width:1024px) {
+    .AddContact{
+      margin: 2rem 4rem 0rem;
+    }
+}
+@media screen and (max-Width:780px) {
+   .AddContact{
+        margin: 2rem 1rem 0rem;
+    }
+ 
 }
