change padding header

--- a/src/components/Navigation/navigation.css
+++ b/src/components/Navigation/navigation.css
@@ -1,5 +1,5 @@
 header{
-    padding: .2rem 1rem;
+    padding: 0rem 1rem;
     color: #444;
     border-bottom: 2px solid #444;
     font-weight: bold;
