--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,28 @@
 .App {
-  /* text-align: center; */
+  display: flex;
+  justify-content: center;
+  align-items: start;
+  min-height: 100vh;
   list-style: none;
 }
+.container{
+  max-width: 100%;
+  min-width: 100%;
+}
+@media screen and (min-width:1536px) {
+  .container{
+      max-width: 1536px;
+      min-width: 1536px;
+  }
+}
 main{
-  height: 100vh;
+  min-height: 100vh;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 footer{
-  position: fixed;
-  bottom: 0;
   width: 100%;
   font-size: 1.4rem;
   padding: 1rem;
